[metadata]
name = KaSaAn
version = 0.2
author = Hector Medina
author_email = hector.f.medina.a@gmail.com
description = API and some convenience scripts for analyzing Kappa expressions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hmedina/KaSaAn
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Environment :: Plugins
	Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >= 3.6
install_requires = 
	matplotlib >= 3.5.1
	numpy >= 1.16
	squarify >= 0.3.0
	networkx >= 2.4

[flake8]
max-line-length = 120
